front/src/assets/scss/profile/profile.scss
.profile-background {
  height: 100vh;
  // background: linear-gradient(0.25turn, rgb(250, 237, 237), rgb(241, 195, 195));
  // color: rgb(250, 249, 249)
  background-color: rgb(250, 237, 237);
}

.container-profile {
  height: 78vh;
}
.profile-header {
  position: relative;
  height: calc(30% + 45px);
  .header-background {
    height: calc(100% - 45px);
    // background: linear-gradient(
    //   0.25turn,
    //   rgb(250, 237, 237),
    //   rgb(241, 195, 195)
    // );
    background: white;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    padding-left: 120px;
    padding-top: 75.11px;
    .header-title {
      margin: 0px 12px;
      color: rgb(241, 141, 141);
    }
    .container-tabs {
      z-index: 1;
      .btn-tab {
        margin: 0px 12px;
        padding-bottom: 3px;
        font-size: 12px;
        outline: none;
      }
      #tab-notifications {
        border-bottom: 3px solid rgb(241, 195, 195);
      }
      #tab-userinfo {
        border-bottom: 3px solid transparent;
      }
    }
  }
  .header-contents {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: flex-end;
    padding: 0 24px;
    .profile-img {
      bottom: 0;
      height: calc(4px * 30 + 6px);
      width: calc(3px * 30 + 6px);
      border-radius: 6px;
      padding: 3px;
      background-color: white;
      img {
        object-fit: cover;
        border-radius: 6px;
        background-size: cover;
        background-position: center;
        height: calc(4px * 30);
        width: calc(3px * 30);
      }
    }
    .btn {
      width: 28px;
      height: 28px;
      position: absolute;
      bottom: 3px;
      left: 89px;
      background: rgb(0, 0, 0, 0.3);
      border-radius: 50%;
      outline: none;
      color: white;
      i {
        color: rgb(255, 255, 255, 0.7);
      }
    }
    .img-similarity {
      background-color: rgb(0, 0, 0, 0.3);
      color: white;
      border-radius: 12px;
      font-size: 0.8rem;
      margin: 0.3rem;
      padding: 0.2rem 0.5rem;
    }
  }
}

.profile-body {
  margin: 14px 30px;
  height: 70%;
}

